--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Gemeng",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "telegraf": "^3.7.3"
+  }
 }
