--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A bot to manage telegram groups",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "author": "Gemeng",
   "license": "ISC",
   "dependencies": {
-    "telegraf": "^3.7.3"
+    "sqlite3": "^3.1.8",
+    "telegraf": "^3.7.3",
+    "telegraf-flow": "^8.1.2"
   }
 }
