--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "babel-node index.js"
   },
   "author": "Gemeng",
   "license": "ISC",
   "dependencies": {
     "firebase": "^4.1.1",
-    "sqlite3": "^3.1.8",
     "telegraf": "^3.7.3",
     "telegraf-flow": "^8.1.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.7.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
